Remove unused InputHandler singleton, swap Guava ImmutableList for List.of
DropItems.java constructs InputHandler directly; the static INSTANCE/
getInstance() were dead. Also drop the Guava import where a plain
List.of() covers it (ConfigStringList still needs ImmutableList).